✨ feat: 배경 제거 API 및 웹 UI 구현 완료
🎨 주요 기능
- rembg 기반 AI 배경 제거 시스템 구현
- 4:5 비율 인스타그램 포맷 지원 (1080x1350px)
- 투명 배경 PNG 및 배경색 커스터마이징 JPEG 출력
- 드래그 앤 드롭 웹 UI 구현

🔧 구현된 모듈
- app/core/background_removal.py: rembg 배경 제거 서비스
- app/core/image_processing.py: 인스타그램 비율 처리 유틸리티
- app/api/v1/image.py: REST API 엔드포인트
- static/index.html: 간단한 웹 UI

📊 API 엔드포인트
- POST /api/v1/remove-background: 배경 제거 메인 API
- POST /api/v1/image-info: 이미지 정보 조회
- GET /api/v1/health: 헬스 체크
- GET /docs: Swagger UI 문서

🎯 인스타그램 비율 지원
- 4:5 (세로형 - 1080x1350) ✅
- 1:1 (정사각형 - 1080x1080) ✅
- 16:9 (가로형 - 1080x566) ✅

🖥️ 웹 UI 기능
- 드래그 앤 드롭 이미지 업로드
- 실시간 결과 미리보기
- 비율 선택 드롭다운
- 배경색 커스터마이징
- 원클릭 다운로드

🧪 테스트 및 검증
- scripts/test_rembg.py: 성능 검증 스크립트
- tests/test_background_removal.py: 단위 테스트
- API 실제 호출 테스트 완료 (HTTP 200)

📦 의존성 추가
- torch, torchvision: PyTorch 프레임워크
- transformers: Hugging Face 모델 로더
- rembg: 배경 제거 라이브러리
- onnxruntime: 모델 실행 엔진
- kornia: 이미지 변환 라이브러리

⚡ 성능
- 처리 시간: ~5초 (CPU 모드)
- 파일 크기: ~80KB (PNG)
- 정확도: 높은 품질의 배경 분리

📝 문서
- UPDATE_2026_01_02.md: 상세 업데이트 로그
- README.md: 개발 일정 업데이트
- Swagger UI: API 자동 문서화

🚀 사용 방법
1. uvicorn app.main:app --reload
2. http://127.0.0.1:8000 접속
3. 이미지 업로드 및 처리

Co-authored-by: AdGen AI Team <team@adgen.ai>

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,16 @@ pydantic==2.5.0
 pydantic-settings==2.1.0
 
 # Image Processing
-rembg==2.0.53
+rembg>=2.0.0
 opencv-python==4.8.1.78
 Pillow==10.1.0
 numpy==1.24.3
+
+# Deep Learning (RMBG-2.0)
+torch==2.1.2
+torchvision==0.16.2
+transformers==4.36.2
+kornia==0.7.1
 
 # Async & Task Queue
 celery==5.3.4
