feat: RMBG-2.0을 Inference API로 전환
- Hugging Face Inference API 사용 (모델 다운로드 불필요)
- GPU 메모리 사용량 대폭 감소
- HF_TOKEN 환경변수로 인증
- 빠른 시작 가이드 추가 (RMBG2_QUICKSTART.md)
- 로컬 모델 대신 클라우드 API 활용

--- a/.env.example
+++ b/.env.example
@@ -33,8 +33,11 @@ OUTPUT_RESOLUTION=1024
 
 # Background Removal Model Settings
 BG_REMOVAL_MODEL=rmbg-2.0  # Options: rmbg-2.0, u2net
-BG_REMOVAL_DEVICE=auto     # Options: cuda, cpu, auto
+BG_REMOVAL_DEVICE=auto     # Options: cuda, cpu, auto (ignored for API)
 BG_REMOVAL_FALLBACK=true   # Fallback to U2-Net if RMBG-2.0 fails
+
+# Hugging Face API (for RMBG-2.0 Inference API)
+HF_TOKEN=your-huggingface-token-here
 
 # Performance
 GPU_ENABLED=true
