feat: Add RMBG-2.0 integration with GCS upload and Docker deployment
- Integrate RMBG-2.0 model (API and local modes)
- Add automatic fallback to U2-Net for reliability
- Implement GCS/local storage service for file uploads
- Add JSON response format with result_url
- Create Dockerfile and docker-compose.yml for deployment
- Add quality benchmarking report (RMBG-2.0 vs U2-Net)
- Update documentation (DEPLOYMENT.md, RMBG2_QUALITY_REPORT.md)

--- a/.gitignore
+++ b/.gitignore
@@ -64,9 +64,8 @@ temp/
 *.gif
 !docs/images/*
 
-# Models
-models/*.pth
-models/*.onnx
+# Models (exclude downloaded models)
+models/
 !models/.gitkeep
 
 # Database
