feat: Integrate AdGen_AI processing services into pipeline
- Add generators module: HybridGenerator for GPU/Replicate API background generation
- Add post_processors module: ColorCorrector, StyleProcessor, WrinkleRemover
- Add vision module: ProductAnalyzer for product characteristics analysis
- Add BackgroundRemovalRembg as alternative background removal implementation
- Update requirements.txt with replicate dependency
- Add comprehensive integration documentation (ADGEN_INTEGRATION.md)
- Add integration test suite (test_adgen_integration.py)
- Update processing module exports to include new services

This integration brings background generation, advanced post-processing,
and vision analysis capabilities from the separate AdGen_AI repository
while maintaining full backward compatibility with existing pipeline.

--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,9 @@ google-cloud-storage==2.10.0
 httpx==0.25.2
 requests==2.31.0
 
+# AdGen_AI Integration (Background Generation & Vision)
+replicate>=0.20.0  # Replicate API client for SDXL background generation
+
 # Utilities
 python-dotenv==1.0.0
 python-jose[cryptography]==3.3.0
